--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Botian XU - Robotics & Reinforcement Learning Researcher</title>
+    <title>Botian XU (许博添) - Robotics & Reinforcement Learning Researcher</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Botian XU - PhD student at CUHK MAE working on reinforcement learning and robotics. Research on legged robots, force-adaptive control, and drone systems.">
@@ -69,9 +69,11 @@
             
             <p>Interests:</p>
             <ul class="interests">
-                <li>Reinforcement Learning for Robots</li>
+                <li>Reinforcement Learning for Legged Robots</li>
                 <li>3D Modeling and Perception for Robot Agents</li>
             </ul>
+
+            <p>I am lucky to work closely with <a href="https://xiaohu-art.github.io/">Liu Cao</a>, <a href="https://haoyangweng.pages.dev/">Qingzhou Lu</a>, and <a href="https://haoyangweng.pages.dev/">Haoyang Weng</a>.</p>
 
             <div class="links">
                 <a href="https://scholar.google.com/citations?user=OLLsgKIAAAAJ&amp;hl=en" target="_blank" class="link-item">
@@ -108,7 +110,7 @@
                     <a href="https://www.arxiv.org/abs/2505.06883" target="_blank">FACET: Force-Adaptive Control via Impedance Reference Tracking for Legged Robots</a>
                 </div>
                 <div class="pub-authors">Botian Xu*, Haoyang Weng*, Qingzhou Lu*, Yang Gao, Huazhe Xu</div>
-                <div class="pub-venue"><em>CoRL 2025</em></div>
+                <div class="pub-venue"><em>CoRL 2025 (Oral, top 10%)</em></div>
             </div>
 
             <div class="publication">
@@ -116,7 +118,7 @@
                     <a href="https://arxiv.org/abs/2412.07237" target="_blank">ArtFormer: Controllable Generation of Diverse 3D Articulated Objects</a>
                 </div>
                 <div class="pub-authors">Jiayi Su*, Youhe Feng*, Zheng Li, Jinhua Song, Yangfan He, Botao Ren, Botian Xu</div>
-                <div class="pub-venue"><em>CVPR 2025</em></div>
+                <div class="pub-venue"><em>CVPR 2025 (top 15%)</em></div>
             </div>
 
             <div class="publication">
